--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
                <section>
                     <ul class="investor-link">Quick Links:
                          <li><a href="investing/portfolio.html">My Portfolio</a></li>
+                         <li><a href="companies/companies.html">Company Profiles</a></li>
                          <li><a href="investing/investing.html">Learn about Financial Planning</a></li>
                          <li><a href="learning/science.html">Learn about the Science</a></li>
                     </ul>
