--- a/investing/planning.html
+++ b/investing/planning.html
@@ -233,8 +233,8 @@
                          <h2 class="investing-headers" id="goals">Setting Goals</h2>
                          <p> 
                               Setting goals financially is about figuring out what you want over the long term and building a 
-                              plant to reach those goals. The first major goal all people should have is retirement. Buying a 
-                              house, paying for college or buying a car will also be bigger financial goals that need planning. 
+                              plan to reach those goals. The first major goal all people should have is retirement. Buying a 
+                              house, paying for college or buying a car will also be big financial goals that need planning. 
                               Budgeting is about figuring out how to pay for all the things we need today while saving money to 
                               pay for all the things we will need later in life. Setting some goals will help us with our budget. 
                               Every goal we set for the long term, needs to be paid for in the short term. When setting these 
@@ -371,17 +371,19 @@
                               started. They are the snowball and avalanche methods. With both methods, you make a list of all your 
                               credit cards along with the balance on each and the interest rate. As you dedicate money into savings, 
                               it goes to paying down those credit cards. With the snowball method, you start by putting all your 
-                              excess money into the card with the lowest balance. Once that card is paid off, you move to the next 
+                              excess money into the card with the lowest balance while maintianing the minimum payment on all the 
+                              other cards. Once that card is paid off, you move to the next 
                               card with all the money you can until it is paid off. This method is used the most as it gives 2 
                               bonuses. First is the quick sense of accomplishment when the first card is paid off. The second benefit 
                               is the money you were paying for that card now goes to help pay off the rest of the cards. For the 
                               avalanche method, you pick the card with the highest interest rate and focus on that one first until 
-                              it's paid off. This can take longer and might take more discipline to get it paid off. Targeting the 
+                              it's paid off while maintaining the minimum payment on the rest of the cards. This can take longer and 
+                              might take more discipline to get it paid off. Targeting the 
                               highest rate card actually saves you more money in the longer term. Regardless of which method you 
                               chose, the goal is to wipe out all that credit card debt and then learn to use them correctly. Paying 
-                              down that debt means nothing if you don’t budget and enact some discipline to prevent racking those 
+                              down that debt means nothing if you don't budget and enact some discipline to prevent racking those 
                               balances back up. Many of those places you see online that are designed to help you consolidate your 
-                              credit cards into a low interest loan pay down your credit cards, but they don’t actually help fix the 
+                              credit cards into a low interest loans to pay down your credit cards, but they don't actually help fix the 
                               underlying cause of the spend impulse. People end up using them to pay off their credit cards then they 
                               go out and max them out again. Then they end up with a consolidation loan and still have maxed out 
                               credit card debt. 
@@ -406,7 +408,7 @@
                          <p>
                               The final use of good debt is to start or expand a business. If you have your own business, taking out 
                               debt to expand or improve that business is considered good debt. This can be used to hire more employees 
-                              or attract more sales. 
+                              or attract more sales. Investing in your own business can improve you total income which makes it an asset.
                          </p>
                          <p class="top-link"><a href="#top">Top</a></p>
                     </section>
@@ -447,14 +449,14 @@
                               average annual return of the market is between 8% and 10%. It has increased over recent years as markets 
                               have done much better under Fed stimulus. I would be conservative and stick with the long term 8% 
                               average. With a simple amount needed, the return rate and the amount of years you have until retirement, 
-                              you can plug those numbers into any one of the countless interest calculators on the internet and find 
+                              you can plug those numbers into any one of the countless retirement calculators on the internet and find 
                               what you need to contribute each month. When it comes to retirement planning, you want a tax free 
                               account. They tend to have limitations against withdrawals before retirement, but they compound interest 
                               free.
                          </p>  
                          <p>
                               Where should you put that money? The first choice should be an employer 401k or equivalent. There are 
-                              some government employee programs that are like 410k, but they call them a different number. In a 401k, 
+                              some government employee programs that are like 401k, but they call them a different number. In a 401k, 
                               the magic lies in the employer matching. The rules for matching can vary for every employer, but the 
                               key thing to remember is it's free money. If you put in $200 and the employer puts in another $200, 
                               that is free money. You are doubling your money right off the bat even before you start compounding 
@@ -463,9 +465,9 @@
                          </p>
                          <p>
                               The second best option is using an IRA. These tend to come in traditional and Roth IRA's. The difference 
-                              between them is how taxes are handled. The tradition allows you to put money in tax free, but you pay 
-                              taxes on the money as you withdraw it in retirement. The Roth gets money put in from after tax income, 
-                              but then you don't have to pay taxes when you withdraw it. The IRA’s have a max contribution limit for 
+                              between them is how taxes are handled. The traditional IRA allows you to put money in tax free, but you pay 
+                              taxes on the money as you withdraw it in retirement. The Roth IRA gets money put in from after tax income, 
+                              but then you don't have to pay taxes when you withdraw it. The IRA's have a max contribution limit for 
                               how much you can put in annually. I think it's currently $7,000 per single person and $14,000 per 
                               couple. That doesn't seem like much, but $7,000 per year for 40 years compounded 8% annually is around 
                               $1.8 million in retirement. That is not a bad amount. At the $14,000 limit for a couple, you would reach 
