--- a/investing/investing.html
+++ b/investing/investing.html
@@ -114,7 +114,7 @@
                               <a href="#">Saving and Investing</a>
                          </li>
                          <li>
-                              <a href="">Buidling a Diviersified Portfolio</a>
+                              <a href="portfoliobuilding.html">Buidling a Diviersified Portfolio</a>
                          </li>
                          <li>
                               <a href="#">Managing Taxes and Fees</a>
