--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                     <ul class="investor-link">Quick Links:
                          <li><a href="investing/portfolio.html">My Portfolio</a></li>
                          <li><a href="companies/companies.html">Company Profiles</a></li>
-                         <li><a href="investing/investing.html">Learn about Financial Planning</a></li>
+                         <li><a href="investing/investing.html">Learn about Investing</a></li>
                          <li><a href="learning/science.html">Learn about the Science</a></li>
                     </ul>
                </section> 
@@ -113,6 +113,11 @@
                     <section class="news-updates">
                          <div>
                               <h2 class="section-title">Website Updates</h2>
+                              <p> 
+                                   <strong>2/19/2023: </strong> I added the first 2 sections under my new 
+                                   <a href="investing/portfoliobuilding.html">Portfiol Building</a> and Investing
+                                   section. 
+                              </p>
                               <p>
                                    <strong>2/18/2023: </strong> I added a <a href="investing/planning.html">Financial Planning</a> page today.
                                    The whole investment section is under construction as I expand the topics and content. Most of the links don't 
@@ -124,13 +129,6 @@
                               <p> 
                                    <strong>2/17/2023: </strong> Added Cell Biology to the Biology page under learning about the Science.
                               <p> 
-                              <p> 
-                                   <strong>2/16/2023: </strong> Updated PACB Profile for earning, but needs 10K to complete. I finished
-                                   the BPMC 10K and updated the profile.
-                              <p> 
-                              <p> 
-                                   <strong>2/16/2023: </strong> Updated BPMC Profile on Earnings but still need the 10K report to finish.
-                                   I updated My Portfolio and changed the headings to better reflect my current strategy.
                          </div>
                     </section>
                </div>
