Added Due Diligence

--- a/investing/portfoliobuilding.html
+++ b/investing/portfoliobuilding.html
@@ -470,7 +470,114 @@
                     <section>
                          <h2 class="investing-headers" id="doingdd">Due Diligence</h2>
                          <p> 
-                              
+                              Now I am going to share with you how I do my due diligence for companies. This is just my method. I 
+                              am sure everyone else has their own. I tend to spend a lot of time getting to know a company very 
+                              well. I like to follow them and get a good feel for the company and the management team. I am never 
+                              in a hurry when shopping for a new company. I make sure I take my time and do all the work before I 
+                              start to buy. Then I start by buying a tiny position to get started. I will nibble away at the 
+                              position over time as I get more and more familiar with the company and confident in my investment. 
+                              If at any time I start to doubt, I stop buying so that my position doesn’t get bigger. This often 
+                              stops me from taking a full position in a company that I will end up selling later once my concern 
+                              comes about. 
+                         </p>
+                         <h3 class="sub-header">Macro is a Backdrop</h3>
+                         <p> 
+                              When it comes to picking a good long term investment, I find too many investors get distracted by 
+                              the macroeconomic backdrop. They let a down market dissuade them from buying a great long term 
+                              investment. The negative sentiment causes them to not buy when the price is actually at its 
+                              cheapest. The economy has its boom and its bust periods. The good news is the bust persiods typically last one to 
+                              two years. The booms can last for many years or even a decade. Taking advantage of a weak market or 
+                              economic backdrop is actually the best asset of a long term investor. There should be no reason 
+                              a recession today or next year would stop you from owning a company you think could be worth 10 
+                              times this value in another 10 or 20 years. Yet, no matter how many times I try to teach investors 
+                              this concept, they still get hung up in the panic and fear of a down market.
+                         </p>  
+                         <h3 class="sub-header">Know Thy Companies</h3>
+                         <p>  
+                              If you really love investing and picking companies, then you should desire to know everything you 
+                              can about them. No one should know more about your companies than you. Obviously, the management 
+                              and insiders will always be privy to information no one else has. No other investor should know 
+                              something that is publicly available information and you do not know it. This means you have to 
+                              spend a lot of time digging through financial reports, presentations, publications and listening 
+                              to webcasts. The only competitive advantage vs other investors you have is knowledge. You should 
+                              know every partnership, every lawsuit, every data read out and the amount of sales each company 
+                              has. Here I am going to share with you my system for doing research on companies before I ever make 
+                              a purchase. 
+                         </p>  
+                         <h3 class="sub-header">Key SEC Filing</h3>
+                         <p>     
+                              The first thing I will do for a company that is new to me is look over their science. I know the 
+                              science and I know what looks like it could work and what looks like it could have problems. I 
+                              really need to see how the science works and what the data looks like before I decide if it can be a 
+                              huge winner or a struggling science concept. If the company has recently gone public, they will 
+                              have a recently published S-1 which is put out ahead of the IPO. These usually go very in depth 
+                              into the science of the company. If the company is within a few years of the IPO, I will go back 
+                              and find the S-1 and go through the science to see if it has any issues or problems. Any company 
+                              that is at least a year old will have published an annual report 10K. This is a very in depth 
+                              document like the S-1 and gets published each year. I am going to read that and make sure I am 
+                              up to date on any data that might have come out since the S-1. Then I check the quarterly report 
+                              10Q to ensure  I have the latest data possible. 
+                         </p>
+                         <p>
+                              The next thing I really want to look at for a company is the Indications and how big they are. 
+                              Small indications make small profits while big indications make big profits. This is important to 
+                              the long term success of the company. I want to know if there are any partners and how they take 
+                              off the sales of any product. I want to really know the financial terms. There is no point to 
+                              owning a company if you don’t know what it could be worth in 10 years. The only way to do that is 
+                              to look at its pipeline and figure out what it can earn in revenues and then figure out what those 
+                              revenues can be worth.
+                         </p>
+                         <p>
+                              You might say, what about management? What about them? The only way to really know a management 
+                              team is to follow them over time and see how well they do. This is the hardest part of any 
+                              investment as management can make or break the best companies. It is never something you are going 
+                              to read in a 500 page document. It can only be determined by watching how a management team handles 
+                              its affairs for presentations, financial management, navigating the regulatory process and building 
+                              the company. 
+                         </p>  
+                         <h3 class="sub-header">Press Releases</h3>
+                         <p> 
+                              I like to go through the press releases of the company. If it is a younger company, I tend to start 
+                              at the very first press release and go through them in chronological order. This gives me a very 
+                              good feel of the news and events in actual time. I can see what decisions the company has made for 
+                              its programs and finances and build a picture of how well they are developing the company over time. 
+                              I tend to go through at least 3 years of press releases, but I will often start at the beginning 
+                              and skim through them all for a company that is new to me.
+                         </p>  
+                         <h3 class="sub-header">Webcast Conferences</h3>
+                         <p>
+                              When it comes to getting to know management, nothing helps better than listening to them present 
+                              and speak. You can get a good feel for how they handle themselves. You can tell if they make hyped 
+                              up claims to pump the company. This is distasteful as many of the management teams that resort to 
+                              hype do so as they lack real sustenance. I can tell if a CEO delegates by allowing his other team 
+                              members to take charge of their respective fields like finance or science. A CEO that dominates 
+                              and doesn’t delegate worries me. I can tell if the CEO knows science or is a finance professional. 
+                              Both can do well, but they need to know both skills or be willing to delegate those areas to 
+                              someone who does. A business person CEO teamed with a great science CSO often does really well. 
+                              You can get to know a management team and how proficient at their job they are by just listening 
+                              to how they present over time. I will often go through at least a year's worth of webcasts if they 
+                              are available. That gets me a few earnings calls and several science conferences if I am lucky. If 
+                              a company doesn’t have those webcasts then I will follow them in real time until I hear enough to 
+                              feel comfortable with the management team. It just takes longer.
+                         </p>  
+                         <h3 class="sub-header">Posters and Presentations</h3>
+                         <p> 
+                              I like to go through the posters, publications and presentations. Not every company will have a 
+                              page of their website where they put publications, but I find I am more confident in the companies 
+                              that share this data. The publications are data that is published in various journals or at science 
+                              meetings. I will also go through the slide decks from the company. Some companies will put out a 
+                              slide deck every month. These can often give very useful data about the indications, their size, 
+                              the competition and potential. 
+                         </p>  
+                         <h3 class="sub-header">Staying up to Date</h3>
+                         <p>
+                              Once I have done all my initial due diligence, I don’t just stop there. I keep up with all these 
+                              events. I usually pick one weekend a month where I will go through all the press releases, events, 
+                              slide decks and SEC filings for each company I own. It has been so important to me, that I put all 
+                              these links on every company’s profile on this website. This saves me a huge amount of time trying 
+                              to go to the website of each company one at a time and find the information. You should get to know 
+                              the company’s website. It will be your top source of information for each company you own. I even 
+                              have a bookmark folder for each company I own. 
                          </p>  
                          <p class="top-link"><a href="#top">Top</a></p>
                     </section>
